--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "animejs": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scrollreveal": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/animejs": "^3.1.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/scrollreveal": "^0.0.8",
     "classnames": "^2.3.1",
     "gh-pages": "^4.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
